--- a/src/main/resources/templates/admin/create.html
+++ b/src/main/resources/templates/admin/create.html
@@ -1,28 +1,12 @@
 <!DOCTYPE html>
-
-<html  lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>New User</title>
 </head>
 <body>
 
-<form
-        th:method="POST" th:action="@{/admin/new}" th:object="${user}">
-
-
-    <p>
-        <label>Select role:
-            <input type="checkbox" name="roles"
-                   th:each="role : ${roles}"
-                   th:text="${role.getRoleName()}"
-                   th:value="${role.getId()}"
-                   th:field="*{roles}"
-            />
-        </label>
-    </p>
-
+<form th:method="POST" th:action="@{/admin/new}" th:object="${user}">
     <label for="firstName">Введите имя:</label>
     <input type="text" th:field="*{firstName}" id="firstName"/>
     <div style="color:red" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">FirstName Error</div>
@@ -42,15 +26,17 @@
     <input type="password" th:field="*{password}" id="password"/>
     <div style="color:red" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password Error</div>
     <br/>
-    <input type="submit" value="Create!">
 
+    <label>
+        <input type="checkbox" th:field="*{admin}" /> Сделать администратором
+    </label>
+    <br/>
+
+    <input type="submit" value="Create!"/>
 </form>
-<br/>
+
 <br/>
 <a href="/admin/users">Back</a>
-<br/>
-<br/>
-<br/>
 <br/>
 <form th:method="POST" th:action="@{/logout}">
     <input type="submit" value="Logout"/>
